src/objects/User_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Script__c</fullName>
        <label>Test Script</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.4.1-Site Record Access and Usability</fullName>
                </value>
                <value>
                    <fullName>1.4.2-View Site Associated Information</fullName>
                </value>
                <value>
                    <fullName>4.1.1-INTAKE Record Access &amp; Usability</fullName>
                </value>
                <value>
                    <fullName>4.1.2-NEW INTAKE Record</fullName>
                </value>
                <value>
                    <fullName>4.1.3-Process WIC REFERRAL Intake Record</fullName>
                </value>
                <value>
                    <fullName>4.2.1-Complete SCREEN</fullName>
                </value>
                <value>
                    <fullName>4.3.1-Capture CONSENT on REFERRAL / SCREEN</fullName>
                </value>
                <value>
                    <fullName>4.4.1-Complete PARENT SURVEY</fullName>
                </value>
                <value>
                    <fullName>4.4.2-Capture CONSENT on PARENT SURVEY</fullName>
                </value>
                <value>
                    <fullName>4.5.1-CONVERT Referral to HOUSEHOLD</fullName>
                </value>
                <value>
                    <fullName>3.2.1-HOUSEHOLD Record Access &amp; Usability</fullName>
                </value>
                <value>
                    <fullName>3.2.2-Complete HOUSEHOLD</fullName>
                </value>
                <value>
                    <fullName>3.2.3-Complete HOUSEHOLD Associated Records</fullName>
                </value>
                <value>
                    <fullName>3.3.1-PERSONS Record Access &amp; Usability</fullName>
                </value>
                <value>
                    <fullName>3.3.2-Complete PERSONS-Adult 1</fullName>
                </value>
                <value>
                    <fullName>3.3.3-Complete PERSONS-Adult 1 Associated Records</fullName>
                </value>
                <value>
                    <fullName>3.3.4-Complete PERSONS-Adult 2</fullName>
                </value>
                <value>
                    <fullName>3.3.5-Complete PERSONS-Adult 2 Associated Records</fullName>
                </value>
                <value>
                    <fullName>3.3.6-Complete PERSONS-TGT-Child</fullName>
                </value>
                <value>
                    <fullName>3.3.7-Complete PERSONS-TGT-Child Associated Records</fullName>
                </value>
                <value>
                    <fullName>3.3.8-Complete PERSONS-Other</fullName>
                </value>
                <value>
                    <fullName>3.3.9-Complete PERSONS-Other Associated Records</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tester_Phone_Number__c</fullName>
        <label>Tester Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Test_Script__c</columns>
        <columns>Tester_Phone_Number__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>